# wikev2connect

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  QUICKSTART.md  README.md  VPN-IKEv2-WatchGuard-Linux.md  build.rs  wikev2connect.spec
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  GUI.md  TESTING.md
examples/: cli_usage.rs  zip_loader.rs
resources/: wikev2connect.desktop  wikev2connect.metainfo.xml
src/: cert.rs  config.rs  errors.rs  main.rs  storage.rs  utils.rs
src/gui/: app.rs  dialogs.rs  main_window.rs  mod.rs  models.rs  operations.rs  state.rs  theme.rs  widgets.rs  window.rs
src/system/: mod.rs  prerequisites.rs
src/vpn/: mod.rs  models.rs  nmcli.rs
tests/: integration_test.rs
