[package]
name = "wikev2connect"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI — egui immediate-mode toolkit (Wayland native, GPU-accelerated)
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts", "glow", "wayland", "x11",
] }
egui = "0.28"
# Native OS file picker (uses XDG portal on KDE Wayland → kdialog)
rfd = "0.14"
# PNG decode for app icon loading
image = { version = "0.25", default-features = false, features = ["png"] }

# VPN Management
tokio = { version = "1", features = ["full"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File handling
zip = "0.6"
walkdir = "2"
tempfile = "3"

# System interaction
async-process = "1"
which = "6"
users = "0.11"

# Keyring/kwallet
secret-service = "3"
keyring = "2"
dbus = "0.9"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4"
parking_lot = "0.12"
once_cell = "1.20"

[dev-dependencies]
mockall = "0.12"
